# configMigrator

./: .gitignore  .pre-commit-config.yaml  README.md  merge_rules.yaml  network_migration_rules.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_mypy.sh  usage_guide.sh
docs/: CLAUDE.md  NETWORK_MIGRATION_RULES_GUIDE.md  README.md  SIMPLIFIED_RULES_GUIDE.md  design_doc.md  implementation_plan.md
rulebooks/: merge_rules_cndbtier_102_to_200.yaml  nrf_migration_rules.yaml
src/: __init__.py  config_migrator.py  conflict_logger.py  diff_analyzer.py  merge_engine.py  network_preservation.py  validators.py  yaml_processor.py
src/config_migrator/: __main__.py
src/config_migrator/cli/: __init__.py  commands.py
src/config_migrator/core/: __init__.py  merger.py  parser.py
src/config_migrator/utils/: __init__.py  logging.py
src/cvpilot/: __init__.py  __main__.py
src/cvpilot/cli/: commands.py
src/cvpilot/core/: analyzer.py  comment_preserving_merger.py  merger.py  parser.py  rulebook.py  transformer.py
src/cvpilot/utils/: helpers.py  logging.py  path_matcher.py
src/dynamic_discovery/: __init__.py  dynamic_detector.py  migration_suggester.py  semantic_analyzer.py
tests/: __init__.py  test_cli.py  test_db_monitor.py  test_diff_analyzer.py  test_dynamic_discovery.py  test_e2e.py  test_helpers.py  test_integration.py  test_logging.py  test_main.py  test_merge_engine.py  test_merger.py  test_migration.py  test_network_preservation.py  test_nrf_component_detection.py  test_nrf_integration.py  test_parser.py  test_rulebook_system.py  test_simple.py  test_transformer.py  test_yaml_processor.py
tests/fixtures/: test_configs.py
tools/: compare_lables.py
